--- a/client/src/components/Navbar/NavbarStyles.module.css
+++ b/client/src/components/Navbar/NavbarStyles.module.css
@@ -29,6 +29,8 @@
 
 .logo h1 {
   font-size: 20px;
+  white-space: nowrap;
+
 }
 
 .navMenu {
